// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search renders with text 1`] = `
<Bem
  block="WrappedTextInput"
  mods={
    Object {
      "error": false,
    }
  }
>
  <textinput
    innerRef={[Function]}
    onChange={[Function]}
    placeholder="Найти"
    showListOnFocus={true}
    size="s"
    text="text"
    theme="normal"
    type="text"
    updateOnEnter={true}
    view="classic"
  />
</Bem>
`;

exports[`Search renders without text 1`] = `
<Bem
  block="WrappedTextInput"
  mods={
    Object {
      "error": false,
    }
  }
>
  <textinput
    innerRef={[Function]}
    onChange={[Function]}
    placeholder="Найти"
    showListOnFocus={true}
    size="s"
    text=""
    theme="normal"
    type="text"
    updateOnEnter={true}
    view="classic"
  />
</Bem>
`;
